--- a/booking.styles.css
+++ b/booking.styles.css
@@ -1,6 +1,6 @@
 body {
     width: 100vw;
-    height: 155vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -46,6 +46,10 @@ body {
     text-transform: uppercase;
     word-wrap: break-word;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
+}
+
+#confirm-label{
+    font-family: Ovo;
 }
 
 .booking-container form .row {
